# hateful-meme-detection

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  models  pyproject.toml  requirements.txt  setup.py
ISSUE_TEMPLATE/: bug_report.md  feature_request.md
configs/: inference_config.json  model_config.json  training_config.json
data/: README.md
discord_bot/: README.md  bot.py
docs/: API.md  DEPLOYMENT.md  GITHUB_TUTORIAL.md  GIT_CHEATSHEET.md
notebooks/: 01_data_exploration.ipynb  02_training.ipynb  03_evaluation.ipynb
scripts/: download_weights.py  quick_start.bat  quick_start.sh
src/: __init__.py  dataset.py  inference.py  losses.py  model.py  train.py  utils.py
tests/: test_model.py
workflows/: ci.yml
