[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hateful-meme-detection"
version = "1.0.0"
description = "Multimodal Hateful Meme Detection using CLIP with Cross-Attention Fusion"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Bhrigu Anilkumar"},
    {name = "Deepa Chandrasekar"},
    {name = "Arshpreet Kaur"}
]
keywords = [
    "deep-learning",
    "multimodal",
    "content-moderation",
    "hate-speech",
    "clip",
    "computer-vision",
    "nlp",
    "pytorch"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "Pillow>=9.0.0",
    "numpy>=1.23.0",
    "tqdm>=4.64.0",
]

[project.optional-dependencies]
train = [
    "albumentations>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "pandas>=1.5.0",
    "wordcloud>=1.9.0",
]
discord = [
    "discord.py>=2.0.0",
    "requests>=2.28.0",
    "python-dotenv>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
all = [
    "hateful-meme-detection[train,discord,dev]",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/hateful-meme-detection"
Documentation = "https://github.com/yourusername/hateful-meme-detection#readme"
Repository = "https://github.com/yourusername/hateful-meme-detection.git"
Issues = "https://github.com/yourusername/hateful-meme-detection/issues"

[project.scripts]
train-model = "src.train:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "discord_bot*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src", "discord_bot"]
skip = [".gitignore", ".dockerignore", "venv", ".venv"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["venv", ".venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "venv/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
